# 3-python-package-scooby-gang

./: BadFortune.txt  GoodFortune.txt  Pipfile  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
fortune/: FortuneCookie.py  __main__.py
python_fortune_cookie/: __main__.py
src/: GoodFortune.txt
src/fortune/: FortuneCookie.py  GoodFortune.txt  __main__.py
src/python_fortune_cookie/: __init__.py
tests/: test_fortune.py
