[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortune"
description = "An example of a package developed with pyenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "0.1.0"
authors = [
  { name="Yeshni Savadatti", email= "ys4823@nyu.edu" }, { name="Lucia Song", email="lys7942@nyu.edu"}, { name="Chelsea Hodgson", email="csh7916@nyu.edu"}, { name="Alan Zhao", email="sz3562@nyu.edu"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [ "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2024/3-python-package-scooby-gang"
"Repository" = "https://github.com/software-students-fall2024/3-python-package-scooby-gang.git"
"Bug Tracker" = "https://github.com/software-students-fall2024/3-python-package-scooby-gang/issues"

[project.scripts]
fortune = "fortune.__main__:main"