[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python_fortune_cookie"
description = "Fortune Cookie Generator for python."
version = "0.1.0"
authors = [
  { name="Yeshni Savadatti", email= "ys4823@nyu.edu" }, { name="Lucia Song", email="lys7942@nyu.edu"}, { name="Chelsea Hodgson", email="csh7916@nyu.edu"}, { name="Alan Zhao", email="sz3562@nyu.edu"},
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [ "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',]


[project.optional-dependencies]

dev = ["pytest",  "bumpver"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2024/3-python-package-scooby-gang"
"Repository" = "https://github.com/software-students-fall2024/3-python-package-scooby-gang.git"
"Bug Tracker" = "https://github.com/software-students-fall2024/3-python-package-scooby-gang/issues"


[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"python_fortune_cookie/__init__.py" = ["{version}"]

[project.scripts]
python_fortune_cookie = "python_fortune_cookie.__main__:main"